--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore directory with public and private keys
-./keys/
+keys/
 
 # Ignore directory with logger outpout and error
-./logs/
+logs/
 
